
2018-02-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_display_fields): activated dump code for
	  BASED items

2018-02-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_module_init): cater for empty source_cache;
	  disabled generation of flag_debug_trace=COB_MODULE_DEBUG as
	  this is currently not checked anywhere
	* warning.def: change cb_warn_filler to be always active
	* error.c, field.c, tree.c, typeck.c: only raise some cb_warn_filler
	  warnings if -W/-Wall was used

2018-02-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.y (validate_move): check for ADDRESS OF var as invalid
	  (bug #495), fixed check for SET statement

2018-02-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y (select_clause): minimized context-sensitive settings
	* reserved.c, cobc.h, parser.y: added CB_CS_SELECT
	* tree.h: added password (reference) to struct cb_file / cb_alternate_key
	* parser.y, reserved.c: added PASSWORD as PENDING (currently only for
	  indexed files)

2018-02-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y (report_description_option): fixed reference for CODE IS
	* parser.y (page_line_column): adjusted check for duplicate LINE LIMIT
	* codegen.c (output_internal_function): fixed position of
	  initialization for report files in INITIAL programs
	* pplex.l, scanner.l: don't consume trailing whitespace/newline
	  if not necessary, combined some groups with optional/or modifiers

2018-02-16  Dave Pitts <dpitts@cozx.com>

	* cobc.c (get_next_token): BUG #494 Fixed scanning of tokens with 
	  embedded quotes, eg. 'yyy-'hello

2018-02-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (validate_move, move_warning): show literal size for
	  size overflow warnings (for numeric literals the actual literal)
	* cobc.c (preprocess): FR #81 preprocess to stdout if no output file