@@ -1,4 +1,9 @@
 
+2018-02-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* parser.y (string_statement): fixed bug #497 STRING within
+	  STRING did override the target list
+
 2018-02-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* codegen.c (output_display_fields): activated dump code for
